--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "@cypress/webpack-dev-server": "^1.8.4",
