--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@cypress/react": "^5.12.4",
     "bulma": "^0.9.3",
     "classnames": "^2.3.1",
+    "npm": "^7.24.2",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
