--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.47.0",
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {
