--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@cypress/react": "^5.12.4",
     "bulma": "^0.9.3",
     "classnames": "^2.3.1",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +33,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
-    "node-sass": "^6.0.1",
+    "sass": "^1.69.5",
     "stylelint": "^13.13.1",
     "typescript": "^4.6.3"
   },
