--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-prettier": "^5.1.3",
     "gh-pages": "^3.2.3",
+    "mate-scripts": "0.0.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
